[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modterm"
dynamic = ["version", "dependencies", "scripts"]
description = "A modbus analyser written in pure Python"
authors = [{ name="Máté Szabó", email="mate@mateszabo.com" }]
readme= "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/matesh/modterm"
Issues = "https://github.com/matesh/modterm/issues"
