[metadata]
name = modterm
version = attr: modterm.__version__

[options]
packages = find:
install_requires =
    pymodbus <= 2.6.9
    pyserial
include_package_data = True

[options.package_data]
* =
    *.json

[options.packages.find]
where=.
exclude=
    assets

[options.entry_points]
console_scripts =
    modterm = modterm.__main__:main
